--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="images/dhayes.jpg"/>
         <h1>Dan Hayes</h1>
         <p>dangular</p>
 
