--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Dan Hayes by dangular</title>
@@ -11,56 +11,58 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <img src="images/dhayes.jpg"/>
-        <h1>Dan Hayes</h1>
-        <p>dangular</p>
-
-
+</head>
+<body>
+<div class="wrapper">
+    <header>
+        <img src="images/dhayes.jpg" height="300"/>
+        <h2>Dan Hayes</h2>
+        <div>dangular</div>
         <p class="view"><a href="https://github.com/dangular">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
+        <a href="http://www.linkedin.com/in/dan19460" >
+            <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" border="0" alt="View Dan Hayes's profile on LinkedIn"/>
+        </a>
+        <!-- <a href="http://www.angularjs.org"><img src="http://angularjs.org/img/AngularJS-large.png"/></a> -->
+    </header>
+    <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            <a name="welcome-to-dangular" class="anchor" href="#welcome-to-dangular"><span
+                    class="octicon octicon-link"></span></a>Welcome</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p>I am Dan Hayes, a free lance web application architect specializing in building rich Single Page Web Apps using
+        <a href="http://angularjs.org">angular.js</a>.  I am also a <strong>Certified Java Enterprise Architect</strong> with over
+        12 years experience working with Fortune 100 clients in the insurance, media, e-commerce, and banking industries.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <p><a href="http://dangular.com">Dangular.com</a> is my personal project <a href="https://github.com/dangular">Github space</a>.  Going forward, it will host my
+        angular.js projects including any tools, plug-ins or open source business applications that leverage
+            <a target="_blank" href="https://www.mongodb.org/">Mongo DB</a>, <a target="_blank" href="http://expressjs.com">Express</a>,
+            <a target="_blank" href="http://angularjs.org">Angular</a>, and <a target="_blank" href="http://nodejs.org">Node</a>
+            (a.k.a. <strong>MEAN</strong>).</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <img src="images/mean.jpg" height="80"/>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+        <h3></h3>
+        <h3>
+            <a name="projects" class="anchor" href="#projects"><span
+                    class="octicon octicon-link"></span></a>Projects</h3>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        <p>Coming soon!</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        <h3>
+            <a name="contact" class="anchor" href="#contact"><span
+                    class="octicon octicon-link"></span></a>Contact</h3>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        <p>For professional opportunities please reach out to me via <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>
+    </section>
+    <footer>
+        <p>
+            <small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+            </small>
+        </p>
+    </footer>
+</div>
+<script src="javascripts/scale.fix.js"></script>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+</body>
 </html>
