--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         12 years experience working with Fortune 100 clients in the insurance, media, e-commerce, and banking industries.</p>
 
 
-        <p><a href="http://dangular.com">Dangular.com</a> is my personal project <a href="https://github.com/dangular">Github space</a>.  Going forward, it will host my
-        angular.js projects including any tools, plug-ins or open source business applications that leverage
-            <a target="_blank" href="https://www.mongodb.org/">Mongo DB</a>, <a target="_blank" href="http://expressjs.com">Express</a>,
-            <a target="_blank" href="http://angularjs.org">Angular</a>, and <a target="_blank" href="http://nodejs.org">Node</a>
-            (a.k.a. <strong>MEAN</strong>).</p>
+        <p><a href="http://dangular.com">Dangular.com</a> is my personal project <a href="https://github.com/dangular">Github space</a>.
+            It will host my angular.js projects including open source business applications that are built on top of the <strong>MEAN</strong>
+            stack.  The MEAN stack is a complimentary set of technologies that includes <a target="_blank" href="https://www.mongodb.org/">Mongo DB</a>,
+            <a target="_blank" href="http://expressjs.com">Express</a>, <a target="_blank" href="http://angularjs.org">Angular</a>,
+            and <a target="_blank" href="http://nodejs.org">Node</a>.  In my opinion, this technology stack is so compelling that it
+            promises to penetrate the enterprise thanks to its developer productivity, event driven programming model, and support
+            for constructing highly interactive web applications.</p>
 
         <img src="images/mean.jpg" height="80"/>
 
