--- a/index.html
+++ b/index.html
@@ -29,31 +29,38 @@
             <a name="welcome-to-dangular" class="anchor" href="#welcome-to-dangular"><span
                     class="octicon octicon-link"></span></a>Welcome</h3>
 
-        <p>I am Dan Hayes, a free lance web application architect specializing in building rich Single Page Web Apps using
-        <a href="http://angularjs.org">angular.js</a>.  I am also a <strong>Certified Java Enterprise Architect</strong> with over
-        12 years experience working with Fortune 100 clients in the insurance, media, e-commerce, and banking industries.</p>
+        <p>I am Dan Hayes, a free lance software architect specializing in building dynamic, single page web applications
+            based upon the <a href="http://angularjs.org">Angular.js</a> Javascript SPA framework.  Angular.js offers a
+            2-way binding model, a dependency injection container, a modular infrastructure, and a rich set of built-in
+            services that make writing large single page web applications possible for even the most sophisticated enterprise
+            applications.</p>
 
+        <p>As a <strong>Certified Java Enterprise Architect</strong>, I see Angular used in conjunction with server
+            side Java technologies such as Spring running within Java Enterprise or Servlet containers.  For many companies
+            with huge investments in these infrastructures, this is a logical combination that can yield outstanding results.
+            However, the most exciting developments are occurring in organizations that have opened the door to application
+            development based entirely upon the <em>MEAN Stack</em>.</p>
 
-        <p><a href="http://dangular.com">Dangular.com</a> is my personal project <a href="https://github.com/dangular">Github space</a>.
-            It will host my angular.js projects including open source business applications that are built on top of the <strong>MEAN</strong>
-            stack.  The MEAN stack is a complimentary set of technologies that includes <a target="_blank" href="https://www.mongodb.org/">Mongo DB</a>,
+        <img src="images/mean.jpg" height="60"/>
+
+        <p><em>MEAN</em>, which stands for <a target="_blank" href="https://www.mongodb.org/">Mongo DB</a>,
             <a target="_blank" href="http://expressjs.com">Express</a>, <a target="_blank" href="http://angularjs.org">Angular</a>,
-            and <a target="_blank" href="http://nodejs.org">Node</a>.  In my opinion, this technology stack is so compelling that it
-            promises to penetrate the enterprise thanks to its developer productivity, event driven programming model, and support
-            for constructing highly interactive web applications.</p>
+            and <a target="_blank" href="http://nodejs.org">Node</a>, is a compelling set of complimentary technologies
+            that is challenging the traditional paradigms of web application development.  Based upon the Javascript programming
+            language, the <em>MEAN</em> technologies work together to deliver a highly productive, event driven programming model
+            that fully supports the construction of highly interactive web interfaces.  When combined with a responsive CSS layout
+            library such as <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a>, the velocity of multi-device
+            application development is taken to the next level.</p>
 
-        <img src="images/mean.jpg" height="80"/>
-
-        <h3></h3>
         <h3>
             <a name="projects" class="anchor" href="#projects"><span
                     class="octicon octicon-link"></span></a>Projects</h3>
 
-        <p>Coming soon!</p>
+        <p>Coming Soon!</p>
 
         <h3>
-            <a name="contact" class="anchor" href="#contact"><span
-                    class="octicon octicon-link"></span></a>Contact</h3>
+            <a name="opportunities" class="anchor" href="#opportunities"><span
+                    class="octicon octicon-link"></span></a>Professional Opportunities</h3>
 
         <p>For professional opportunities please reach out to me via <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>
     </section>
