--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="images/dhayes.jpg" height="300"/>
+        <img src="images/dhayes_md.jpg" height="300"/>
         <h2>Dan Hayes</h2>
         <div>dangular</div>
         <p class="view"><a href="https://github.com/dangular">View My GitHub Profile</a></p>
