Updated wording on index.html

--- a/index.html
+++ b/index.html
@@ -25,20 +25,17 @@
         <!-- <a href="http://www.angularjs.org"><img src="http://angularjs.org/img/AngularJS-large.png"/></a> -->
     </header>
     <section>
-        <h3>
-            <a name="welcome-to-dangular" class="anchor" href="#welcome-to-dangular"><span
-                    class="octicon octicon-link"></span></a>Welcome</h3>
 
-        <p>I am Dan Hayes, a free lance software architect specializing in building dynamic, single page web applications
-            based upon the <a href="http://angularjs.org">Angular.js</a> Javascript SPA framework.  Angular.js offers a
-            2-way binding model, a dependency injection container, a modular infrastructure, and a rich set of built-in
-            services that make writing large single page web applications possible for even the most sophisticated enterprise
+        <p>My name is Dan Hayes and I am a free lance software architect specializing in building dynamic, single page web
+            applications based upon the <a href="http://angularjs.org">Angular.js</a> Javascript SPA framework.  Angular.js
+            offers a 2-way binding model, a dependency injection container, a modular architecture, and a rich set of built-in
+            services that make writing large single page web applications manageable for even the most sophisticated enterprise
             applications.</p>
 
-        <p>As a <strong>Certified Java Enterprise Architect</strong>, I see Angular used in conjunction with server
-            side Java technologies such as Spring running within Java Enterprise or Servlet containers.  For many companies
+        <p>As an experienced <strong>Certified Java Enterprise Architect</strong>, I see Angular used in conjunction with server
+            side Java technologies such as Spring running within Java Enterprise or Servlet containers.  For companies
             with huge investments in these infrastructures, this is a logical combination that can yield outstanding results.
-            However, the most exciting developments are occurring in organizations that have opened the door to application
+            However, the most exciting developments are occurring in environments that have opened the door to application
             development based entirely upon the <em>MEAN Stack</em>.</p>
 
         <img src="images/mean.jpg" height="60"/>
@@ -53,16 +50,15 @@
             application development is taken to the next level.</p>
 
         <h3>
-            <a name="projects" class="anchor" href="#projects"><span
-                    class="octicon octicon-link"></span></a>Projects</h3>
-
-        <p>Coming Soon!</p>
-
-        <h3>
             <a name="opportunities" class="anchor" href="#opportunities"><span
                     class="octicon octicon-link"></span></a>Professional Opportunities</h3>
 
-        <p>For professional opportunities please reach out to me via <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>
+        <p>I am available for consulting opportunities on a full-time and part-time basis and equally comfortable in both
+            <em>hybrid</em> (i.e. Angular + Java EE) or <em>100% Javascript</em> (MEAN) environments. I also have access
+            to a network of highly qualified Angular and Java resources for larger project work.  If you would like to contact
+            me further regarding professional opportunities, please reach out via
+            <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>.
+
     </section>
     <footer>
         <p>
