--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Dan Hayes</h2>
         <div>dangular</div>
         <p class="view"><a href="https://github.com/dangular">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/dangular/wiki/About">More About Me</a></p>
         <a href="http://www.linkedin.com/in/dan19460" >
             <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" border="0" alt="View Dan Hayes's profile on LinkedIn"/>
         </a>
