--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="images/dhayes_md.jpg" height="300"/>
         <h2>Dan Hayes</h2>
         <div>dangular</div>
+        <div><a href="https://github.com/dangular/dangular.github.io/wiki/About">More About Me</a></div>
         <p class="view"><a href="https://github.com/dangular">View My GitHub Profile</a></p>
-        <p class="view"><a href="https://github.com/dangular/wiki/About">More About Me</a></p>
         <a href="http://www.linkedin.com/in/dan19460" >
             <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.gif" border="0" alt="View Dan Hayes's profile on LinkedIn"/>
         </a>
@@ -59,6 +59,7 @@
             to a network of highly qualified Angular and Java resources for larger project work.  If you would like to contact
             me further regarding professional opportunities, please reach out via
             <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>.
+        <p>You can learn more about me <a href="https://github.com/dangular/dangular.github.io/wiki/About">here</a>.</p>
 
     </section>
     <footer>
