Minor layout change

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <em>hybrid</em> (i.e. Angular + Java EE) or <em>100% Javascript</em> (MEAN) environments. I also have access
             to a network of highly qualified Angular and Java resources for larger project work.  If you would like to contact
             me further regarding professional opportunities, please reach out via
-            <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a></p>.
+            <a target="_blank" href="http://www.linkedin.com/in/dan19460">Linked In</a>.</p>
         <p>You can learn more about me <a href="https://github.com/dangular/dangular.github.io/wiki/About">here</a>.</p>
 
     </section>
